# QGenie_api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build_deploy_executables.yml  build_release_and_notify.yml  pr_bot.yml
app/: main.py
app/api/: ai_chat_api.py  annotation_api.py  api_key_api.py  api_router.py  chat_messages_api.py  chat_tab_api.py  connect_driver.py  connections.py  driver_api.py  health.py  health_api.py  query_api.py  test_api.py  user_db_api.py
app/api/api_key/: api.py  store_api_key_api.py
app/core/: all_logging.py  db_driver_enum.py  driver_enum.py  exceptions.py  port.py  response.py  security.py  status.py  utils.py
app/core/enum/: constraint_type.py  db_driver.py  db_key_prefix_name.py  llm_service.py  llm_service_info.py  sender.py
app/db/: init_db.py
app/repository/: ai_chat_repository.py  annotation_repository.py  api_key_repository.py  chat_message_repository.py  chat_tab_repository.py  connect_db_repository.py  query_repository.py  user_db_repository.py
app/schemas/: api_key.py  db_driver_info.py  db_profile_model.py  driver_info.py  llm_api_key.py  response.py
app/schemas/ai_chat/: create_model.py  db_model.py  response_model.py
app/schemas/annotation/: ai_model.py  base_model.py  db_model.py  hierarchical_response_model.py  request_model.py  response_model.py
app/schemas/api_key/: base_model.py  create_model.py  db_model.py  decrypted_response_model.py  response_model.py  update_model.py
app/schemas/chat_message/: base_model.py  db_model.py  request_model.py  response_model.py
app/schemas/chat_tab/: base_model.py  create_model.py  db_model.py  response_model.py  update_model.py  validation_utils.py
app/schemas/driver/: driver_info_model.py
app/schemas/query/: query_model.py  result_model.py
app/schemas/user_db/: connect_test_result_model.py  db_profile_model.py  result_model.py
app/schemas/view/: connection_result_model.py
app/services/: ai_chat_service.py  annotation_service.py  api_key_service.py  chat_message_service.py  chat_tab_service.py  driver_checker.py  driver_info_provider.py  driver_service.py  query_service.py  user_db_service.py
app/services/api_key/: service.py  store_api_key_service.py
app/tests/api/: test_connections.py  test_driver_check.py  test_driver_info_api.py  test_driver_info_provider.py  test_environment.py
app/tests/unit/: test_driver_info_provider.py  test_driver_info_unit.py
